--- a/index.html
+++ b/index.html
@@ -1366,6 +1366,11 @@ Ariel Jankord</p>
 	</div>
 
  </div><!-- Footer Scripts
+
+<!--Chat Bot From Flowxo -->
+ <script src="https://widget.flowxo.com/embed.js" data-fxo-widget="eyJ0aGVtZSI6IiNjOTFlNjgiLCJ3ZWIiOnsiYm90SWQiOiI2MDdmMGYxMDVkODBhMzAwMTBiNDE3NTMiLCJ0aGVtZSI6IiNjOTFlNjgiLCJsYWJlbCI6IvCfkagifSwid2VsY29tZVRleHQiOiLwn5GNIn0=" async defer></script>
+ 
+
 ============================================= -->
 <script src="assets/js/jquery-3.3.1.min.js"></script>
 <script src="assets/js/plugins.js"></script>
