--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
 <!-- Document Title
     ============================================= -->
 <title>Our School | All in One Platform</title>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JC0J2PK5SH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JC0J2PK5SH');
+</script>
 </head>
 <body>
 <div class="preloader">
