--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 						data-responsive_offset="on" 
 						>
 						<div class="slide-action">
-							<a class="btn btn-secondary btn-hover" href="#">Learn More</a>
+							<a class="btn btn-secondary btn-hover" href="about.html">Learn More</a>
 						</div>
 					</div>
 				</li>				
