--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	
 <!-- Cookie -->
  <div class="cookies">
-    <img src="#" alt="">
+    <img src="profile/tazel-profile.png" alt="">
     <div class="content">
       
       <p>This website use cookies to ensure you get the best experience on our website.</p>
