--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     ============================================= -->
 <link href="assets/css/external.css" rel="stylesheet">
 <link href="assets/css/style.css" rel="stylesheet">
+	<link href="assets/css/purecookie.css" rel="stylesheet">
 
-<!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
+
 <!--[if lt IE 9]>
       <script src="assets/js/html5shiv.js"></script>
       <script src="assets/js/respond.min.js"></script>
