--- a/class/LearnPython3.html
+++ b/class/LearnPython3.html
@@ -562,32 +562,32 @@
                              data-loop="false">
                             <div>
                                 <div class="p-5 bg-primary text-white">
-                                    <h5 class="font-weight-normal s-14">Views</h5>
-                                    <span class="s-48 font-weight-lighter text-primary">140</span>
+                                    <h5 class="font-weight-normal s-14">Hard</h5>
+                                    <span class="s-48 font-weight-lighter text-primary">Level</span>
                                     <div>
                                         <span class="text-primary">
-                                            <i class="icon icon-arrow_downward"></i> 67%</span>
+                                            <i class="icon icon-arrow_downward"></i> 10%</span>
                                     </div>
                                 </div>
                             </div>
 
                             <div>
                                 <div class="p-5">
-                                    <h5 class="font-weight-normal s-14">Share</h5>
-                                    <span class="s-48 font-weight-lighter amber-text">700</span>
+                                    <h5 class="font-weight-normal s-14">Best</h5>
+                                    <span class="s-48 font-weight-lighter amber-text">Video</span>
                                     <div>
                                             <span class="amber-text">
-                                            <i class="icon icon-arrow_downward"></i> 34%</span>
+                                            <i class="icon icon-arrow_downward"></i>  Quality</span>
                                     </div>
                                 </div>
                             </div>
                             <div>
                                 <div class="p-5 light">
-                                    <h5 class="font-weight-normal s-14">Comments</h5>
-                                    <span class="s-48 font-weight-lighter text-indigo">411</span>
+                                    <h5 class="font-weight-normal s-14"> Good</h5>
+                                    <span class="s-48 font-weight-lighter text-indigo">Audio</span>
                                     <div>
                                         <span class="text-indigo">
-                                            <i class="icon icon-arrow_downward"></i> 89%</span>
+                                            <i class="icon icon-arrow_downward"></i> Quality</span>
                                     </div>
                                 </div>
                             </div>
