--- a/class/index.html
+++ b/class/index.html
@@ -6,6 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Tazel">
+    
+    <meta data-rh="true" name="keywords" content="100% Bangladesian. 100% natural. The Bangladesi Green Fruit"/>
+      <!--Facebook introduced Open Graph in 2010. It promotes integration between Facebook and other websites by allowing them to become rich “graph” objects with the same functionality as other Facebook objects. Put simply, a degree of control is possible over how information travels from a third-party website to Facebook when a page is shared (or liked, etc.). In order to make this possible, information is sent via Open Graph meta tags in the <head> part of the website’s code. -->
+      <!--og:url
+         This is how you set the canonical URL for the page you are sharing. What this means is that you define one page that all your shares will go to. It’s useful if you happen to have more than one URL for the same content (for example, using parameters). Important note: URL provided is not shown on Facebook newsfeed, only domain is visible.
+         Example:<meta property=”og:url” content=”http://www.yourdomain.com” />
+         for more info : https://neilpatel.com/blog/open-graph-meta-tags/ -->
+      <meta data-rh="true" property="og:url" content="index.html"/>
+      <meta data-rh="true" property="og:site_name" content="World-Class Learning For Anyone, Anywhere."/>
+      <!--It is also a open graph protocol 
+         Facebook documentation recommends one additional <meta> tag. A <meta> tag that denotes the name of the Web site in which the shared page resides:<meta property="og:site_name" content="European Travel, Inc.">
+         for more info : https://css-tricks.com/essential-meta-tags-social-media/-->
+      <meta data-rh="true" property="og:description" content="World-Class Learning For Anyone, Anywhere."/>
+      <!--It is also a open graph protocol for provide descriptions on facebook
+         for more info : https://css-tricks.com/essential-meta-tags-social-media/-->
+      <meta data-rh="true" property="og:image" content="../cdn.sanity.io/images/iru36z53/production/1.png?w=1280"/>
+      <!--It is also a open graph protocol for displaying on facebook
+         for more info : https://css-tricks.com/essential-meta-tags-social-media/-->
+      <meta data-rh="true" property="og:image:width" content="1280"/>
+      <!--It is also a open graph protocol for displaying on facebook by specifying width size ,here the size is 1280
+         for more info : https://css-tricks.com/essential-meta-tags-social-media/-->
+      <meta data-rh="true" property="og:image:height" content="722"/>
+      <!--It is also a open graph protocol for displaying on facebook by specifying height size, here the size is 722
+         for more info : https://css-tricks.com/essential-meta-tags-social-media/-->
+      <meta data-rh="true" name="twitter:card" content="summary_large_image"/>
+      <!--It is also a open graph protocol for twitter Adding a Summary Card with Large Image to your Tweets is as simple as adding the below meta tags to your site
+         for more info : https://css-tricks.com/essential-meta-tags-social-media/-->
+      <meta data-rh="true" name="twitter:site" content="World-Class Learning For Anyone, Anywhere."/>
+      <!--It is also a open graph protocol 
+         twitter documentation recommends one additional <meta> tag. A <meta> tag that denotes the name of the Web site in which the shared page resides:<meta property="og:site_name" content="European Travel, Inc.">
+         for more info : https://css-tricks.com/essential-meta-tags-social-media/-->
+      <meta data-rh="true" name="twitter:title" content="World-Class Learning For Anyone, Anywhere."/>
+      <!--It is also a open graph protocol 
+         twitter documentation recommends one additional <meta> tag. A <meta> tag that denotes the name of the Web site in which the shared page resides:<meta property="og:site_name" content="European Travel, Inc.">
+         for more info : https://css-tricks.com/essential-meta-tags-social-media/-->
+      <meta data-rh="true" name="twitter:description" content="World-Class Learning For Anyone, Anywhere."/>
+      <!--It is also a open graph protocol 
+         twitter documentation recommends one additional <meta> tag. A <meta> tag that denotes the description of the Web site in which the shared page resides:<meta property="og:site_name" content="European Travel, Inc.">
+         for more info : https://css-tricks.com/essential-meta-tags-social-media/-->
+      <meta data-rh="true" name="twitter:image" content="../cdn.sanity.io/images/iru36z53/production/1.png?w=1280"/>
+      <!--It is also a open graph protocol for displaying on twitter
+         for more info : https://css-tricks.com/essential-meta-tags-social-media/-->
+      <link data-rh="true" rel="canonical" href="index.html"/>
+      <!-- for more info https://blog.alexa.com/canonical-url/ -->
+    
     <link rel="icon" href="assets/img/basic/favicon.ico" type="image/x-icon">
     <title>Our School | All in One Platform</title>
     <!-- CSS -->
