--- a/contact.html
+++ b/contact.html
@@ -328,8 +328,8 @@
                                 </div><!-- .contact-icon end -->
                                 <div class="contact-content">
                                     <h6>Address:</h6>
-                                    <p>23 AlBahr Street, Tanta City , AlGharbia, Egypt.</p>
-                                    <a href="#">View Location On Map</a>
+                                    <p>Jahangirnagar University, Savar, Dhaka-1343.</p>
+                                    <a href="https://weblabadmin.netlify.app/maps.html">View Location On Map</a>
                                 </div><!-- .contact-content end -->
                             </div>
                         </div>
