--- a/contact.html
+++ b/contact.html
@@ -315,7 +315,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-4">
                 <div class="heading heading-2 heading-9">
-                    <div class="subheading">We Wanna Hear From You</div>
+                    <div class="subheading">We Are Hear From You</div>
                     <h2 class="mb-0">Contact Information</h2>
                 </div><!-- .heading end -->
                 <div class="contact-info">
@@ -340,7 +340,7 @@
                                 </div><!-- .contact-icon end -->
                                 <div class="contact-content">
                                     <h6>Email:</h6>
-                                    <p>7oroof@7oroof.com</p>
+                                    <p>tazelhossan@gmail.com</p>
                                 </div><!-- .contact-content end -->
                             </div>
                         </div>
