--- a/class/index.html
+++ b/class/index.html
@@ -977,7 +977,7 @@
                     <div class="card">
                         <figure class="card-img figure">
                             <div class="img-wrapper">
-                                <img src="assets/img/demo/v10.jpg" alt="Card image">
+                                <img src="assets/img/demo/tazel-home.png" alt="Card image">
                             </div>
                             <div class="img-overlay text-white">
                                 <div class="figcaption">
