--- a/class/daily-task.html
+++ b/class/daily-task.html
@@ -397,7 +397,7 @@
             <a href="#" data-toggle="push-menu" class="paper-nav-toggle pp-nav-toggle ml-2 mr-2">
                 <i></i>
             </a>
-            <a class="navbar-brand d-none d-lg-block" href="index-2.html">
+            <a class="navbar-brand d-none d-lg-block" href="index.html">
                 <div class="d-flex align-items-center s-14 l-s-2">
                     <span>BACK TO HOME</span>
                 </div>
